# extract-bits

./: .gitignore  CMakeLists.txt
app/: main.cpp
benchmarks/: CMakeLists.txt  bm.cpp
include/: ExtractBits.h  ReadData.h
src/: ExtractBits.cpp  ReadData.cpp
test/: CMakeLists.txt  test_1bit.cpp  test_2bits.cpp
tests/: CMakeLists.txt  test_1bit.cpp
